--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="./TwoPlayer.css" rel="stylesheet">
+    <title>Dice Game</title>
+    <link href="./Dicegame.css" rel="stylesheet">
 </head>
 <body>
     <div id="mainArea" class="main-area">
@@ -20,6 +20,6 @@
         </div>
  <div id="gameMessage"></div>
     </div>
-    <script src="./TwoPlayer.js"></script>
+    <script src="./Dicegame.js"></script>
 </body>
 </html>
